Increasing proportion that routes are drawn

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     function parseArray(railwaysList) {
       return railwaysList.map(function(railway) {
         return railway.map(function(r) {
-          return [r[0], r[1], r[2], r[3], {x: (r[4][0] + r[4][2]) / 2, y: (r[4][1] + r[4][3]) / 2}]
+          return [r[0], r[1], r[2], r[3], {x: (r[4][0] + r[4][2]) * 1.5 / 2, y: (r[4][1] + r[4][3]) * 1.5 / 2}]
         })
       });
     }
     window.onload = function () {
       var rlines = [];
-      var s = Snap(600, 600);
+      var s = Snap(900, 900);
       var k = 0;
       var dot = [];
       var railNum = s.text(25, 25, k);
@@ -86,7 +86,7 @@
           dot_exist = !!dot[i];
           if (!dot_exist) {
             dot[i] = s.circle(x, y, 1);
-            dot[i].animate({r: 5}, (200 * Math.min(railway.length - i, dot.length - i)), function(i) {
+            dot[i].animate({r: 10}, (200 * Math.min(railway.length - i, dot.length - i)), function(i) {
               this.attr({ fill: ((i === (railway.length - 1)) ? "#ffff00" : "#ff0000"), stroke: "#000", strokeWidth: 2, "stroke-opacity": 0.5 });
             }.bind(dot[i], i) );
           }
